<resources>
    <string name="app_name">STTarter Demo</string>

    <string name="app_key">cb5d85ce01bbc179fece64b29be895d0</string>
    <string name="app_secret">a5a2e3d81d8b57ec0fb4647079486678</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>

    <string name="navMessages">Messages</string>
    <string name="navWallet">Wallet</string>
    <string name="navCoupon">Coupon</string>
    <string name="navReferral">Referral</string>
    <string name="navContentSystem">Content systems</string>
    <string name="navLogout">Logout</string>

    <string name="no_groups_available">You are not a member of any group at the moment</string>

    <string name="header_in_the_Toolbar">Header in the Toolbar</string>
    <string name="desc_in_the_Toolbar">Desc in the Toolbar</string>
    <string name="im_typing">I\'m typing</string>
    <string name="write_a_message...">Write a message...</string>
    <string name="unsubscribe">Leave Group</string>
    <string name="create_group">Create Group</string>

    <string name="otp_will_appear_in_box_below">Your OTP will appear in the box below</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm_OTP">Confirm OTP</string>
    <string name="login">LOGIN</string>

    <string name="welcome">Welcome</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="registration_form">Registration Form</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="OTP_code">OTP Code</string>


    <string name="bag_items">You have 3 Items in your bag</string>


    <string name="email_or_username">Email or Username</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="dob">Date Of Birth</string>
    <string name="userIdentifier">Username</string>
    <string name="extIdentifier">Ext Id</string>
    <string name="password">Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="users_list">User List</string>
    <string name="group_name">Group Name</string>

    <string name="forgot_uname_or_pword">Forgot User Identifier or password?</string>
    <string name="new_user_signup">New User? SignUp</string>
    <string name="or">or</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_sttarter_auth">Login With STTarter Auth</string>
    <string name="login_sttarter_otp">Login With STTarter OTP</string>
    <string name="login_sttarter_custom_auth">Login With Custom Auth</string>

    <string name="password_needed">Please enter your Password</string>

    <string name="share_and_earn">Share and earn</string>
    <string name="share_string">Share with your friends and get 500 in your wallet everytime someone joins! </string>
    <string name="search">Search</string>

    <string name="please_enter_your_name">Please enter your Name</string>
    <string name="please_enter_your_username">Please enter your Username</string>
    <string name="please_enter_your_email_id">Please enter your Email ID</string>
    <string name="please_enter_valid_email_id">Please enter a valid Email ID</string>
    <string name="please_enter_phone_number">Please enter your Phone Number</string>

    <string name="referral_code_copied">Referral code copied</string>


    <string name="shared_wallet">Shared Wallet</string>
    <string name="personal_wallet">Personal Wallet</string>
    <string name="admin">Admin</string>
    <string name="balance">Balance: Rs. 10000</string>
    <string name="view_transactions">View Transactions</string>
    <string name="spent">Spent</string>
    <string name="total">Total</string>

</resources>
