<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMessages"
            android:icon="@drawable/message"
            android:title="@string/navMessages" />
        <item
            android:id="@+id/navWallet"
            android:icon="@drawable/wallet"
            android:title="@string/navWallet" />
        <item
            android:id="@+id/navCoupons"
            android:icon="@drawable/coupon"
            android:title="@string/navCoupon" />
        <item
            android:id="@+id/navReferral"
            android:icon="@drawable/referral"
            android:title="@string/navReferral" />
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/logout"
            android:title="@string/navLogout" />
    </group>

</menu>
