<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/article_top_margin_large"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/login_logo" />

    <Button
        android:id="@+id/btnSTTarterAuth"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/article_top_margin_large"
        android:text="@string/login_sttarter_auth" />


    <Button
        android:id="@+id/btnSTTarterOTP"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/article_top_margin_large"
        android:text="@string/login_sttarter_otp" />

    <Button
        android:id="@+id/btnCustomAuth"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/article_top_margin_large"
        android:text="@string/login_sttarter_custom_auth" />

</LinearLayout>