<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/article_top_margin_extra_large"
        android:orientation="vertical">

        <com.nps.android.utils.TextViewDescription
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/article_top_margin_large"
            android:gravity="center"
            android:text="@string/registration_form"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/article_top_margin_large"
            android:background="@drawable/white_edittext_shape_no_corners"
            android:hint="@string/your_name"
            android:inputType="text"
            android:padding="@dimen/article_top_margin_medium"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/article_top_margin_large"
            android:background="@drawable/white_edittext_shape_no_corners"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/article_top_margin_medium"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/text_medium" />

        <Spinner
            android:id="@+id/spinnerClassApplyingFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/article_top_margin_large"
            android:background="@drawable/white_edittext_shape_no_corners" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/article_top_margin_large"
            android:background="@drawable/white_edittext_shape_no_corners"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="@dimen/article_top_margin_medium"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/buttonSignUpSubmit"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/article_top_margin_large"
            android:text="@string/submit" />

        <!--
        <TextView
            android:id="@+id/registerTextView"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If you are new user tap here"  /> -->


    </LinearLayout>

</LinearLayout>
