<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_large"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/size_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_medium"
            android:text="@string/personal_wallet"
            android:textAllCaps="true"
            android:textColor="@color/extraDarkGrey"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:text="@string/balance"
            android:textColor="@color/extraDarkGrey"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/size_medium"
                android:paddingLeft="@dimen/size_medium"
                android:text="@string/spent"
                android:textAllCaps="true"
                android:textColor="@color/extraDarkGrey"
                android:textSize="@dimen/text_medium" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_medium"
                android:progress="45" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_medium"
                android:paddingLeft="@dimen/size_medium"
                android:text="@string/total"
                android:textAllCaps="true"
                android:textColor="@color/extraDarkGrey"
                android:textSize="@dimen/text_medium" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_medium"
                android:progress="75" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>