<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/article_top_margin_large"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/article_top_margin_extra_large"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/article_top_margin_large"
            android:layout_marginRight="@dimen/article_top_margin_large"
            android:layout_marginTop="@dimen/article_top_margin_large"
            android:background="@drawable/rounded_edittext_login"
            android:drawableLeft="@drawable/cellphone"
            android:drawablePadding="@dimen/size_medium"
            android:hint="@string/phone_number"
            android:inputType="text"
            android:padding="@dimen/article_top_margin_medium"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/text_medium" />


        <Button
            android:id="@+id/loginButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/article_top_margin_large"
            android:text="@string/login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_medium"
            android:gravity="center"
            android:text="@string/forgot_uname_or_pword"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />
        <TextView
            android:id="@+id/newUserSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_medium"
            android:gravity="center"
            android:text="@string/new_user_signup"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />
        <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_small"
                android:text="@string/or"
                android:textColor="@color/white" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>-->

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/gPulsLoginButton"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/article_top_margin_large"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_gplus"
                android:drawableLeft="@drawable/gplus"
                android:text="@string/login" />

            <Button
                android:id="@+id/fbLoginButton"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/article_top_margin_large"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_fb"
                android:drawableLeft="@drawable/facebook"
                android:text="@string/login" />
        </LinearLayout>-->
    </LinearLayout>

</LinearLayout>
